[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "readme-ai-streamlit"
version = "0.1.0"
description = "🎈 Auto-generate beautiful README files on Streamlit, powered by AI 🌤"
authors = ["Eli <0x.eli.64s@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "streamlit",
    "streamlit-cloud",
    "streamlit-llm",
    "streamlit-gpt",
    "streamlit-ai",
    "readme-generator",
    "openai-api",
    "llms",
]

[tool.poetry.dependencies]
python = ">=3.9"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"
pytest-sugar = "*"
pytest-xdist = "*"