[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "src"
version = "0.1.0"
description = "🧚‍♀️ Generate beautiful README automatically on Streamlit"
authors = ["Eli <0x.eli.64s@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = [
    "streamlit",
    "streamlit-cloud",
    "streamlit-llm",
    "streamlit-gpt",
    "streamlit-ai",
    "readme-generator",
    "openai-api",
    "llms",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
readmeai = ">=0.4.99"
streamlit = ">=1.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
