[project]
name = "src"
version = "0.1.0"
description = "Automated README file generator, powered by AI."
authors = [
    { name = "Eli", email = "egsalamie@gmail.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
keywords = [
    "ai-documentation",
    "anthropic",
    "badge-generator",
    "developer-tools",
    "documentation",
    "documentation-generator",
    "gemini",
    "gpt",
    "gpt-4",
    "markdown",
    "markdown-generator",
    "markdown-md",
    "readme-md",
    "readme-md-generator",
    "readme-generator",
    "readme-template",
    "readme-md-generator",
    "streamlit",
]
dependencies = [
    "readmeai==0.5.99post4",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]
test = [
    "pytest==7.4.4",
    "pytest-cov",
    "pytest-randomly",
    "pytest-sugar",
    "pytest-xdist",
]

[project.urls]
Homepage = "https://github.com/eli64s/readme-ai"
Documentation = "https://eli64s.github.io/readme-ai"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
